Fix spacing bugs

--- a/public/style.css
+++ b/public/style.css
@@ -43,6 +43,7 @@ thead {
 	display: table;
 	width: 100%;
 	background-color: #FEF9E7;
+	font-weight: bold;
 }
 tbody {
 	display: block;
@@ -69,4 +70,9 @@ td {
 	border-left: none;
 	padding: 1%;
 	font-size: 16px;
+}
+
+#quickSearch {
+	margin-left: 5%;
+	margin-top: 2%;
 }
